Too long email address fix

--- a/frontend/src/app/usermenu/component/dropdown.component.scss
+++ b/frontend/src/app/usermenu/component/dropdown.component.scss
@@ -17,5 +17,8 @@
   .name {
     margin-top: 8px;
     font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
